--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,26 @@
-<app-star></app-star>
+<div style="width: 400px; margin: 2em;">
+    <label for="comment">Comment : </label>
+    <textarea name="comment" class="form-control"></textarea>
+    <button (click)="addcomment()" style="margin: 1em" class="btn btn-primary">Add Comment</button>
+</div>
+<div style="width: 400px; margin: 2em;" *ngIf=" comments != null" >
+    <div *ngFor="let c of comments">
+        <p>{{c.comment}}</p> 
+        <div>
+            <app-star [rating] = "c.numberOfReviews != 0 ? c.star/c.numberOfReviews : 0"></app-star>
+        </div>
+        <div>
+            <span>{{c.like}}</span>
+            <i class="fas fa-heart" style="cursor: pointer"></i>
+            <span>{{c.dislike}}</span>
+            <i class="fas fa-heart" style="cursor: pointer"></i>
+       </div>
+       <div>
+           <span>Rating: </span>
+            <input type="number" min="0" max="5" width="30px">
+        </div>
+        <hr>
+        <br>
+    </div>
+    
+</div>
