--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,23 @@
 <div style="width: 400px; margin: 2em;">
     <label for="comment">Comment : </label>
-    <textarea name="comment" class="form-control"></textarea>
+    <textarea #commentText name="comment" class="form-control"></textarea>
     <button (click)="addcomment()" style="margin: 1em" class="btn btn-primary">Add Comment</button>
 </div>
 <div style="width: 400px; margin: 2em;" *ngIf=" comments != null" >
     <div *ngFor="let c of comments">
-        <p>{{c.comment}}</p> 
-        <div>
+        <p style="clear: both;">{{c.comment}}</p> 
+        <div style="float: left;">
             <app-star [rating] = "c.numberOfReviews != 0 ? c.star/c.numberOfReviews : 0"></app-star>
         </div>
-        <div>
+        <div style="float: right;">
             <span>{{c.like}}</span>
-            <i class="fas fa-heart" style="cursor: pointer"></i>
+            <i (click)="increaseLike(c)" class="fas fa-heart" style="cursor: pointer; color: lime; margin-right: 10px;"></i>
             <span>{{c.dislike}}</span>
-            <i class="fas fa-heart" style="cursor: pointer"></i>
+            <i (click)="increaseDislike(c)" class="fas fa-heart" style="cursor: pointer; color: orangered;"></i>
        </div>
-       <div>
+       <div style="clear: both;">
            <span>Rating: </span>
-            <input type="number" min="0" max="5" width="30px">
+            <input #ratingInput type="number" min="0" max="5" style="width: 40px;" (keyup.enter)="reviewsCount(c, ratingInput)">
         </div>
         <hr>
         <br>
